--- a/core/pom.xml
+++ b/core/pom.xml
@@ -129,7 +129,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
-			<artifactId>hydra-admin</artifactId>
+			<artifactId>hydra-database</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
