--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -30,7 +30,7 @@
     <dependencies>
   	<dependency>
   		<groupId>com.findwise.hydra</groupId>
-  		<artifactId>hydra-admin</artifactId>
+  		<artifactId>hydra-database</artifactId>
   		<version>0.2.0-SNAPSHOT</version>
   		<type>jar</type>
   		<scope>compile</scope>
