--- a/stages/in/server/pom.xml
+++ b/stages/in/server/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.findwise.hydra</groupId>
-    <artifactId>hydra-json-input</artifactId>
+    <artifactId>hydra-input-server</artifactId>
     <packaging>jar</packaging>
     <version>0.2.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
@@ -15,20 +15,13 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-api</artifactId>
-            <version>0.1.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.findwise.hydra</groupId>
-            <artifactId>hydra-input-server</artifactId>
             <version>0.2.0-SNAPSHOT</version>
-            <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore-nio</artifactId>
+            <version>4.1</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -39,13 +32,6 @@
 			<version>4.8.2</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.8.5</version>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
