--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -37,7 +37,7 @@
   	</dependency>
   	<dependency>
   		<groupId>com.findwise.hydra</groupId>
-  		<artifactId>basic-stages</artifactId>
+  		<artifactId>hydra-basic-stages</artifactId>
   		<version>0.2.0-SNAPSHOT</version>
   		<type>jar</type>
   		<scope>compile</scope>
@@ -50,7 +50,7 @@
   		<scope>compile</scope>
   	</dependency>
   	<dependency>
-  		<groupId>apache-lang</groupId>
+  		<groupId>commons-lang</groupId>
   		<artifactId>commons-lang</artifactId>
   		<version>2.1</version>
   		<type>jar</type>
