--- a/stages/in/json-in/pom.xml
+++ b/stages/in/json-in/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-api</artifactId>
-            <version>0.1.0</version>
+            <version>0.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -91,57 +91,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.3</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>install</phase>
-                        <configuration>
-                            <tasks>
-                                <echo>${finalName}</echo>
-                                <copy todir="${env.HYDRA_HOME}">
-                                    <fileset dir="target/" includes="${finalName}-jar-with-dependencies.jar" />
-                                </copy>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-
-                    <execution>
-                        <id>clean</id>
-                        <phase>clean</phase>
-                        <configuration>
-                            <tasks>
-                                <delete file="${env.HYDRA_HOME}\${finalName}-jar-with-dependencies.jar" />
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+           
         </plugins>
     </build>
-
-
-    <scm>
-       <developerConnection>scm:svn:https://svn.findwise.com/Findwise/Hydra/in/trunk</developerConnection>
-    </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>fw-releases</id>
-            <url>https://mvn.findwise.com/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>fw-snapshots</id>
-            <url>https://mvn.findwise.com/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
