--- a/stages/in/solr-in/pom.xml
+++ b/stages/in/solr-in/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-core</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -55,12 +55,7 @@
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-cell</artifactId>
 			<version>3.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
+		</dependency>		
 	</dependencies>
 
 	<build>
@@ -106,19 +101,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<scm>
-		<developerConnection>scm:svn:https://svn.findwise.com/Findwise/Hydra/stages/solr-in/trunk</developerConnection>
-	</scm>
-
-	<distributionManagement>
-		<repository>
-			<id>fw-releases</id>
-			<url>https://mvn.findwise.com/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>fw-snapshots</id>
-			<url>https://mvn.findwise.com/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
