--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
@@ -27,7 +27,7 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.9.0</version>
-			<scope>Test</scope>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	
@@ -75,7 +75,4 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<scm>
-		<developerConnection>scm:svn:https://svn.findwise.se/Findwise/Hydra/stages/hydra-tika-text-extraction-stage</developerConnection>
-	</scm>
 </project>
