--- a/stages/processing/web/pom.xml
+++ b/stages/processing/web/pom.xml
@@ -10,9 +10,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
-			<artifactId>basic-stages</artifactId>
-			<version>0.1.0</version>
-			<scope>compile</scope>
+			<artifactId>hydra-basic-stages</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+			
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -83,21 +83,5 @@
 		        </configuration>
 		    </plugin>
 		</plugins>
-	</build>    
-        
-        
-	<scm>
-		<developerConnection>scm:svn:https://svn.findwise.com/Findwise/Hydra/stages/web-stages/trunk</developerConnection>
-	</scm>
-
-	<distributionManagement>
-		<repository>
-			<id>fw-releases</id>
-			<url>https://mvn.findwise.com/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>fw-snapshots</id>
-			<url>https://mvn.findwise.com/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
+	</build>        
 </project>
