--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.findwise.hydra.stage.tika</groupId>
-	<artifactId>text-extraction-stage</artifactId>
+	<artifactId>tika-stages</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
-			<version>0.7</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
