--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -3,7 +3,23 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.findwise.hydra.stage.tika</groupId>
 	<artifactId>tika-stages</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2.0</version>
+	<description>Solr Output Stage</description>
+	<url>http://findwise.github.com/Hydra</url>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git@github.com:Findwise/Hydra.git</connection>
+		<developerConnection>scm:git:git@github.com:Findwise/Hydra.git</developerConnection>
+		<url>https://github.com/Findwise/Hydra</url>
+	</scm>
 
 	<dependencies>
 		<dependency>
@@ -15,7 +31,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.2.0</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
@@ -33,7 +49,6 @@
 	
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -42,7 +57,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -67,7 +81,30 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
