--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.findwise.hydra</groupId>
     <artifactId>hydra-examples</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <name>Hydra Test Setups</name>
     <description>Contains scripts to perform certain manual tests</description>
     <build>
