--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.findwise.hydra.stage.tika</groupId>
-	<artifactId>tika-stages</artifactId>
+	<groupId>com.findwise.hydra</groupId>
+	<artifactId>hydra-tika-stages</artifactId>
 	<version>0.2.0</version>
 	<description>Solr Output Stage</description>
 	<url>http://findwise.github.com/Hydra</url>
