--- a/database-impl/inmemory/pom.xml
+++ b/database-impl/inmemory/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-memorydb</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>Hydra Inmemory database implementation</description>
 	<url>http://findwise.github.com/Hydra</url>
