--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-basic-stages</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>Basic Stages - A package of basic stages for Hydra</description>
 	<url>http://findwise.github.com/Hydra</url>
