--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-tika-stages</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<description>Solr Output Stage</description>
 	<url>http://findwise.github.com/Hydra</url>
 
