--- a/stages/processing/web/pom.xml
+++ b/stages/processing/web/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-web-stages</artifactId>
     <name>${project.artifactId}</name>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
