Refactoring MongoDB implementation out of database package
Long-needed refactoring. Database interfaces are now in database
package, while the actual implementation using MongoDB are in
database-impl/mongodb!

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <modules>
 	<module>api</module>
 	<module>database</module>
+	<module>database-impl/mongodb</module>
 	<module>database-impl/inmemory</module>
 	<module>core</module>
   </modules>
