--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -62,14 +62,14 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-database</artifactId>
-            <version>0.2.0</version>
+            <version>0.3.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-basic-stages</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.3.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -91,6 +91,13 @@
 	  		<groupId>commons-cli</groupId>
 	  		<artifactId>commons-cli</artifactId>
 	  		<version>1.2</version>
+	  		<type>jar</type>
+	  		<scope>compile</scope>
+	  	</dependency>
+	  	<dependency>
+	  		<groupId>com.findwise.hydra</groupId>
+	  		<artifactId>hydra-mongodb</artifactId>
+	  		<version>0.3.0-SNAPSHOT</version>
 	  		<type>jar</type>
 	  		<scope>compile</scope>
 	  	</dependency>
