Refactored Configuration code

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -3,3 +3,5 @@ polling_interval = 10
 namespace = pipeline
 database_user = admin
 database_password = changeme
+old_max_count = 2000
+old_max_size_mb = 200
