--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -6,14 +6,13 @@
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-
 	<properties>
 		<spring.version>3.1.1.RELEASE</spring.version>
 		<cglib.version>2.2.2</cglib.version>
 	</properties>
 
 	<build>
-		<finalName>rest</finalName>
+		<finalName>hydra</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
