Fixed an error deserializing a pipelineconfig. Added unit test

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>jcommander</artifactId>
             <version>1.26</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
