--- a/database/pom.xml
+++ b/database/pom.xml
@@ -5,7 +5,7 @@
 	<packaging>jar</packaging>
 	<version>0.3.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
-	<description>Hydra Database Package - Database interfaces AND MongoDB implementation</description>
+	<description>Hydra Database Package - Database interfaces</description>
 	<url>http://findwise.github.com/Hydra</url>
 
 	<licenses>
@@ -43,6 +43,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.4</version>
@@ -55,6 +61,13 @@
 			<version>2.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5-rc1</version>
+			<type>jar</type>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
