--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,14 @@
           </goals>
         </execution> 
       </executions>
-    </plugin>
+  </plugin>
+  <plugin> 
+      <artifactId>maven-javadoc-plugin</artifactId>
+      <version>2.8.1</version>
+      <configuration>
+          <aggregate>true</aggregate>
+      </configuration>
+  </plugin> 
     </plugins>
   </build>
 </project>
