--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>hydra-tika-stages</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<description>Solr Output Stage</description>
+        <name>${project.artifactId}</name>
 	<url>http://findwise.github.com/Hydra</url>
 
 	<licenses>
@@ -31,7 +32,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.2.0</version>
+			<version>0.3.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
