--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-tika-stages</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
-	<description>Solr Output Stage</description>
+	<description>Tika Text Extraction Stage</description>
         <name>${project.artifactId}</name>
 	<url>http://findwise.github.com/Hydra</url>
 
