--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -76,8 +76,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -90,7 +90,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.findwise.hydra.stage.AbstractStage</mainClass>
+                            <mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
