--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -68,7 +68,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>com.findwise.hydra.stage.AbstractStage</mainClass>
+							<mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
