--- a/core/pom.xml
+++ b/core/pom.xml
@@ -166,7 +166,7 @@
 			<artifactId>hydra-memorydb</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 			<type>jar</type>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
