Completely remade the caching functionality.

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -2,6 +2,8 @@
 namespace = pipeline
 polling_interval = 10
 performance_logging = false
+cache = true
+
 # Port for Hydra core-to-stage communication
 #rest_port = 12001
 
