Use SocketAppender and slf4j as logging api
- Deprecates com.findwise.hydra.Logger (simply use slf4j instead)
- Uses SocketAppender in the stages and SimpleSocketServer in the core
- Removes InternalLogger class. Use LoggerFactory.getLogger("internal") instead.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -54,7 +54,12 @@
 			<version>1.8.5</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 
 
 	<build>
