commented out the core.logging.performance = true, setting default to false

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -22,7 +22,7 @@ core.pipeline = pipeline
 # Type: Boolean
 # Default: false
 
-core.logging.performance = true
+# core.logging.performance = true
 
 # If set, core will use a local in-memory cache to offload the underlying
 # database somewhat. It is recommended to have this on for most installations.
