--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-tika-stages</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<description>Tika Text Extraction Stage</description>
 	<name>${project.artifactId}</name>
 	<url>http://findwise.github.com/Hydra</url>
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.3.0</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
