Adds logging config to properties file.

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -24,6 +24,13 @@ core.pipeline = pipeline
 
 # core.logging.performance = true
 
+# Port for Hydra stage-to-core logging
+#
+# Type: Integer
+# Default: 12002
+
+# core.logging.port = 12002
+
 # If set, core will use a local in-memory cache to offload the underlying
 # database somewhat. It is recommended to have this on for most installations.
 #
