--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-api</artifactId>
 	<packaging>jar</packaging>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>Hydra API</description>
 	<url>http://findwise.github.com/Hydra</url>
