Adding required meta-information to pom files for release to Maven Central

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
+	<developers>
+		<developer>
+			<id>findwise</id>
+			<name>Findwise</name>
+			<email>hydra-processing@googlegroups.com</email>
+		</developer>
+	</developers>
+	
 	<profiles>
 		<profile>
 			<id>stresstest</id>
