--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -27,6 +27,15 @@
         <main.class>com.findwise.hydra.stage.AbstractStage</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+	
+	<developers>
+		<developer>
+			<id>findwise</id>
+			<name>Findwise</name>
+			<email>hydra-processing@googlegroups.com</email>
+		</developer>
+	</developers>
+
     <dependencies>
         <dependency>
             <groupId>com.findwise.hydra</groupId>
