--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -22,6 +22,14 @@
 		<developerConnection>scm:git:git@github.com:Findwise/Hydra.git</developerConnection>
 		<url>https://github.com/Findwise/Hydra</url>
 	</scm>
+	
+	<developers>
+		<developer>
+			<id>findwise</id>
+			<name>Findwise</name>
+			<email>hydra-processing@googlegroups.com</email>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
