--- a/stages/debugging/debugging/pom.xml
+++ b/stages/debugging/debugging/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-debugging-stage</artifactId>
 	<packaging>jar</packaging>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
 	<name>hydra-debugging-stage</name>
 	<description>Solr Debugging Stage</description>
 	<url>http://findwise.github.com/Hydra</url>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.3.0</version>
+			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
