--- a/stages/processing/web/pom.xml
+++ b/stages/processing/web/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.findwise.hydra</groupId>
 	<artifactId>hydra-web-stages</artifactId>
     <name>${project.artifactId}</name>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
 	<description>Web Content processing stages</description>
 	<url>http://findwise.github.com/Hydra</url>
 	
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.3.0</version>
+			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
