--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -1,10 +1,16 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.findwise.hydra</groupId>
+
+	<parent>
+		<groupId>com.findwise.hydra</groupId>
+		<artifactId>stages</artifactId>
+		<version>0.4.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
+	</parent>
+
     <artifactId>hydra-basic-stages</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Basic Stages - A package of basic stages for Hydra</description>
     <url>http://findwise.github.com/Hydra</url>
@@ -46,13 +52,13 @@
         </dependency>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <artifactId>junit-dep</artifactId>
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>1.8.5</version>
             <scope>test</scope>
         </dependency>
