--- a/stages/processing/hydra-groovy-runner/pom.xml
+++ b/stages/processing/hydra-groovy-runner/pom.xml
@@ -1,9 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.findwise.hydra</groupId>
+	<parent>
+		<groupId>com.findwise.hydra</groupId>
+		<artifactId>stages</artifactId>
+		<version>0.4.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
+	</parent>
 	<artifactId>hydra-groovy-runner</artifactId>
-	<version>0.0.2</version>
 	<dependencies>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
@@ -17,8 +21,8 @@
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.9</version>
+			<artifactId>junit-dep</artifactId>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
