--- a/stages/processing/web/pom.xml
+++ b/stages/processing/web/pom.xml
@@ -1,12 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.findwise.hydra</groupId>
+	<parent>
+		<groupId>com.findwise.hydra</groupId>
+		<artifactId>stages</artifactId>
+		<version>0.4.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
+	</parent>
 	<artifactId>hydra-web-stages</artifactId>
     <name>${project.artifactId}</name>
 	<description>Web Content processing stages</description>
 	<url>http://findwise.github.com/Hydra</url>
-	<version>0.4.0-SNAPSHOT</version>
-	
+
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -52,8 +56,8 @@
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.9</version>
+			<artifactId>junit-dep</artifactId>
+			<version>4.11</version>
             <scope>test</scope>
 		</dependency>
 		<dependency>
