--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -22,6 +22,12 @@
 			<version>0.4.0-SNAPSHOT</version>
 			<classifier>jar-with-dependencies</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.findwise.hydra</groupId>
+			<artifactId>hydra-inserter</artifactId>
+			<version>0.4.0-SNAPSHOT</version>
+			<classifier>jar-with-dependencies</classifier>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -37,8 +43,11 @@
 						<configuration>
 							<tasks>
 								<copy file="../core/target/hydra-core-jar-with-dependencies.jar"
-								      tofile="bin/hydra-core.jar"/>
-								<copy file="../core/target/resource.properties" tofile="bin/resource.properties"/>
+								    tofile="bin/hydra-core.jar"/>
+								<copy file="../core/target/resource.properties"
+									tofile="bin/resource.properties"/>
+								<copy file="../tools/inserter/target/hydra-inserter-jar-with-dependencies.jar"
+									tofile="tools/hydra-inserter.jar"/>
 							</tasks>
 						</configuration>
 						<goals>
