--- a/tools/inserter/pom.xml
+++ b/tools/inserter/pom.xml
@@ -1,9 +1,8 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
-		<artifactId>hydra-tools</artifactId>
+		<artifactId>tools</artifactId>
 		<version>0.4.0-SNAPSHOT</version>
 	</parent>
     <artifactId>hydra-inserter</artifactId>
@@ -27,7 +26,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>inserter</finalName>
+                    <finalName>hydra-inserter</finalName>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -62,6 +61,18 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.findwise.hydra</groupId>
+            <artifactId>hydra-database</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.findwise.hydra</groupId>
+            <artifactId>hydra-api</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
