--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>hydra-parent</artifactId>
 		<version>0.4.0-SNAPSHOT</version>
 	</parent>
-    <artifactId>hydra-tools</artifactId>
+    <artifactId>tools</artifactId>
     <name>${artifactId}</name>
     <description>Tools for interacting with and setting up Hydra</description>
     <packaging>pom</packaging>
@@ -16,18 +16,6 @@
     </modules>
 
     <dependencies>
-        <dependency>
-            <groupId>com.findwise.hydra</groupId>
-            <artifactId>hydra-database</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.findwise.hydra</groupId>
-            <artifactId>hydra-api</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
-        </dependency>
-
         <!-- Test deps -->
         <dependency>
             <groupId>junit</groupId>
