Use wiremock in SimpleFetchingTikaStageTest
No longer tries to access google.com during test. Fixes #235

--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -37,6 +37,18 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>1.33</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
